remove use of kotlin